--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ## Byte-compiled / optimized / DLL files
-#__pycache__/
+__pycache__/
 #*.py[cod]
 #*$py.class
 #
@@ -136,3 +136,4 @@
 .idea/inspectionProfiles/Project_Default.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/.gitignore
+__pycache__
